tablet-right-scrollbar-fix

--- a/sanmo.css
+++ b/sanmo.css
@@ -880,6 +880,9 @@ nav {
     .meet-harshid-card {
         height: 34vh
     }
+    nav{ 
+        width: 96vw; 
+    };
 }
 
 /* ================== Responsive for Mobile ================== */
